err/minideblib.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/minideblib'...
Compiling './lib/python3.5/site-packages/minideblib/AptRepoClient.py'...
***   File "./lib/python3.5/site-packages/minideblib/AptRepoClient.py", line 544
    except urllib2.HTTPError, hte:
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minideblib/ChangeFile.py'...
***   File "./lib/python3.5/site-packages/minideblib/ChangeFile.py", line 41
    return `self._value`
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minideblib/DpkgChangelog.py'...
***   File "./lib/python3.5/site-packages/minideblib/DpkgChangelog.py", line 177
    raise DpkgChangelogException, "Invalid first line"
                                ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minideblib/DpkgControl.py'...
***   File "./lib/python3.5/site-packages/minideblib/DpkgControl.py", line 145
    print "Unknown type `%s'!" % type
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minideblib/DpkgDebPackage.py'...
***   File "./lib/python3.5/site-packages/minideblib/DpkgDebPackage.py", line 218
    print "Can't open file %s" % path
                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minideblib/DpkgUtils.py'...
***   File "./lib/python3.5/site-packages/minideblib/DpkgUtils.py", line 36
    print msg
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/minideblib/DpkgVersion.py'...
***   File "./lib/python3.5/site-packages/minideblib/DpkgVersion.py", line 56
    raise BadInputError, "Input cannot be empty"
                       ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minideblib/GPGSigVerifier.py'...
***   File "./lib/python3.5/site-packages/minideblib/GPGSigVerifier.py", line 31
    return `self._value`
           ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/minideblib/SignedFile.py'...
***   File "./lib/python3.5/site-packages/minideblib/SignedFile.py", line 92
    print "Need one file as an argument"
                                       ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/minideblib-0.6.21.29.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
